--- a/explorer/index-tmpl.html
+++ b/explorer/index-tmpl.html
@@ -34,6 +34,7 @@
 
         <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
         <script type="text/javascript" src="js/hammer.min.js"></script>
+        <script type="text/javascript" src="js/gghelpers.js"></script>
     </head>
     <body>
         <div id="main-container">
@@ -235,7 +236,6 @@
             };
         </script>
 
-        <script type="text/javascript" src="gghelpers.js"></script>
         <script async type="text/javascript" src="t2d-explorer.js"></script>
     </body>
 </html>
