Add fade-in effect

--- a/explorer/index-tmpl.html
+++ b/explorer/index-tmpl.html
@@ -174,6 +174,7 @@
 
                 var canvas = document.getElementById("container_canvas");
                 canvas.hidden = false;
+                canvas.classList.add("fade-in");
 
                 // does not work well with touch pads
                 if (mobileCheck()) {
