--- a/explorer/index-tmpl.html
+++ b/explorer/index-tmpl.html
@@ -240,6 +240,7 @@
             };
         </script>
 
-        <script async type="text/javascript" src="t2d-explorer.js"></script>
+        <!--<script async type="text/javascript" src="t2d-explorer.js"></script>-->
+        <script>document.write('<script async type="text/javascript" src="t2d-explorer.js?dev=' + Math.floor(Math.random() * 1000) + '"\><\/script>');</script>
     </body>
 </html>
