--- a/explorer/index-tmpl.html
+++ b/explorer/index-tmpl.html
@@ -120,7 +120,7 @@
             }
 
             function init() {
-                document.getElementById('container_status').innerHTML = "WebAssembly module initialized successfully! Press the Init button to start:"
+                document.getElementById('container_status').innerHTML = "WebAssembly module initialized successfully!"
                 document.getElementById('container_status').style.color = "#00ff00";
 
                 window.addEventListener('keydown', onkeydown, true);
