--- a/explorer/index-tmpl.html
+++ b/explorer/index-tmpl.html
@@ -111,10 +111,9 @@
 
             function checkForActions(event) {
                 setTimeout(function() { 
-                    var openId = Module.get_action_open_id();
-                    if (openId.length > 2) {
-                        var url = 'https://twitter.com/tweet2doom/status/' + openId;
-                        window.open(url, '_blank').focus();
+                    var openUrl = Module.get_action_open_url();
+                    if (openUrl.length > 2) {
+                        window.open(openUrl, '_blank').focus();
                     }
                 }, 250);
             }
